--- a/game.html
+++ b/game.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Battloids</title>
+    <title>Raumschiffschlacht</title>
 
     <style>
         canvas {
@@ -15,82 +16,174 @@
         let KEY_SPACE = false; // 32
         let KEY_UP = false; // 38
         let KEY_DOWN = false; // 40
+        let canvas;
         let ctx;
         let backgroundImage = new Image();
 
         let rocket = {
-            x: 100;
-            y: 200;
-            width: 200;
-            height: 80;
-            src: 'grafik/rackete.png'
+            x: 50,
+            y: 200,
+            width: 100,
+            height: 50,
+            src: 'img/rocket.png'
         };
 
-        let ufo = {
-            x: 100;
-            y: 200;
-            width: 200;
-            height: 80;
-            src: 'grafik/ufo.png'
-        };
+        let ufos = [];
+        let shots = [];
 
         document.onkeydown = function(e) {
-            if (e.keyCode == 32) { 
+            if (e.keyCode == 32) {
                 KEY_SPACE = true;
             }
 
-            if (e.keyCode == 38) { 
+            if (e.keyCode == 38) {
                 KEY_UP = true;
             }
 
-            if (e.keyCode == 40) { 
+            if (e.keyCode == 40) {
                 KEY_DOWN = true;
             }
         }
 
+
         document.onkeyup = function(e) {
-            if (e.keyCode == 32) { 
+            if (e.keyCode == 32) {
                 KEY_SPACE = false;
             }
 
-            if (e.keyCode == 38) { 
+
+            if (e.keyCode == 38) {
                 KEY_UP = false;
             }
 
-            if (e.keyCode == 40) { 
+            if (e.keyCode == 40) {
                 KEY_DOWN = false;
             }
         }
 
         function startGame() {
+            canvas = document.getElementById('canvas');
             ctx = canvas.getContext('2d');
             loadImages();
+            setInterval(update, 1000 / 25);
+            setInterval(createUfos, 5000);
+            setInterval(checkForCollion, 1000 / 25);
+            setInterval(checkForShoot, 1000 / 10);
             draw();
         }
 
-        function loadImages(){
-            backgroundImage.src = 'grafik/hintergrund.png';
-            rocket.img = new Image();
-            rocket.img.src = rocket.src;
+        function checkForCollion() {
+            ufos.forEach(function(ufo) {
 
-            ufo.img = new Image();
-            ufo.img.src = ufo.src;
+                if (rocket.x + rocket.width > ufo.x &&
+                    rocket.y + rocket.height > ufo.y &&
+                    rocket.x < ufo.x &&
+                    rocket.y < ufo.y + ufo.height
+                ) {
+                    rocket.img.src = 'img/boom.png';
+                    console.log('Collion!!!');
+                    ufos = ufos.filter(u => u != ufo);
+                }
+
+                shots.forEach(function(shot) {
+                    if (shot.x + shot.width > ufo.x &&
+                        shot.y + shot.height > ufo.y &&
+                        shot.x < ufo.x &&
+                        shot.y < ufo.y + ufo.height
+                    ) {
+                        ufo.hit = true;
+                        ufo.img.src = 'img/boom.png';
+                        console.log('Collion!!!');
+
+                        setTimeout(() => {
+                            ufos = ufos.filter(u => u != ufo);
+                        }, 2000);
+                    }
+
+                });
+
+            });
         }
 
-        function draw(){
+        function createUfos() {
+            let ufo = {
+                x: 800,
+                y: Math.random() * 500,
+                width: 100,
+                height: 40,
+                src: 'img/ufo.png',
+                img: new Image()
+            };
+            ufo.img.src = ufo.src;
+            ufos.push(ufo);
+        }
+
+        // Deine Hausaufgabe
+        function checkForShoot() {
+            if (KEY_SPACE) {
+                let shot = {
+                    x: rocket.x + 110,
+                    y: rocket.y + 22,
+                    width: 20,
+                    height: 4,
+                    src: 'img/shot.png',
+                    img: new Image()
+                };
+                shot.img.src = shot.src;
+
+                shots.push(shot);
+            }
+        }
+
+        function update() {
+            if (KEY_UP) {
+                rocket.y -= 5;
+            }
+
+            if (KEY_DOWN) {
+                rocket.y += 5;
+            }
+
+            ufos.forEach(function(ufo) {
+                if (!ufo.hit) {
+                    ufo.x -= 5;
+                }
+            });
+
+
+            shots.forEach(function(shot) {
+                shot.x += 15;
+            });
+        }
+
+        function loadImages() {
+            backgroundImage.src = 'img/background.jpg';
+            rocket.img = new Image();
+            rocket.img.src = rocket.src;
+        }
+
+        function draw() {
+            ctx.drawImage(backgroundImage, 0, 0);
+            ctx.drawImage(rocket.img, rocket.x, rocket.y, rocket.width, rocket.height);
+
+            ufos.forEach(function(ufo) {
+                ctx.drawImage(ufo.img, ufo.x, ufo.y, ufo.width, ufo.height);
+            });
+
+
+            shots.forEach(function(shot) {
+                ctx.drawImage(shot.img, shot.x, shot.y, shot.width, shot.height);
+            });
+
 
             requestAnimationFrame(draw);
         }
     </script>
-
-
 </head>
 
-
-<body onload="startGame()"></body>
-    <canvas id="canvas" width="1280" height="720"></canvas>
+<body onload="startGame()">
+    <canvas id="canvas" width="720" height="480"></canvas>
 
 </body>
-
 
 </html>
